GlobalShortcuts: Set shortcuts in BindShortcuts

The protocol changed in
https://github.com/flatpak/xdg-desktop-portal/commit/8cb5b6d997108443ecc26152c95bbca8c8c58fc3
to accept shortcuts in BindShortcuts instead of CreateSession.
xdg-desktop-portal no longer forwards shortcuts from CreateSession so
before this change, no shortcuts could be created.

BUG: 474741
(cherry picked from commit a748343ee8a8cdfaeaa4a40544ce41a5e3b56e97)